# verlet-cli

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/verlet/: __init__.py  auth.py  cli.py  config.py  display.py  download.py  license.py
src/verlet/ego/: __init__.py  catalog.py  commands.py  download.py
src/verlet/teleop/: __init__.py  catalog.py  commands.py
