[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verlet"
version = "0.2.1"
description = "Verlet Data CLI — download ego and teleop datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
verlet = "verlet.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/verlet"]
